Fix nav spacing on some mobile devices

--- a/src/components/Navigation.scss
+++ b/src/components/Navigation.scss
@@ -41,4 +41,7 @@
   .navbar * {
     font-size: 15px;
   }
+  #title {
+    padding: 0 0 !important;
+  }
 }
